[gd_scene load_steps=11 format=3 uid="uid://6pvqeojxe07v"]

[ext_resource type="PackedScene" uid="uid://bxumtieeccywb" path="res://project/scenes/entities/enemy/enemy.tscn" id="1_h42vf"]
[ext_resource type="Script" path="res://project/scenes/entities/enemy/enemy.gd" id="2_8i6in"]
[ext_resource type="Texture2D" uid="uid://cbj5ob3bmyggs" path="res://raw_art/asset_packs/village assets/Art/Characters/Slime/Slime_Idle.png" id="2_m0rv5"]
[ext_resource type="Script" path="res://project/scripts/components/hit_area_component.gd" id="3_025i4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6lvrx"]
atlas = ExtResource("2_m0rv5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw6bc"]
atlas = ExtResource("2_m0rv5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6orah"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lvrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw6bc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_trb3i"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ovnpp"]
radius = 8.06226

[sub_resource type="CircleShape2D" id="CircleShape2D_inhqc"]
radius = 8.0

[node name="Slime" instance=ExtResource("1_h42vf")]
collision_mask = 0
script = ExtResource("2_8i6in")
enemy_id = "slime"

[node name="BodySprite" parent="Sprites" index="0"]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_6orah")
autoplay = "default"
frame_progress = 0.16173

[node name="MoveBox" parent="." index="1"]
shape = SubResource("CircleShape2D_trb3i")

[node name="StatComponent" parent="Components" index="0"]
max_health = 10

[node name="HurtComponent" parent="Components" index="1"]
collision_layer = 4
collision_mask = 0
faction = 2

[node name="CollisionShape2D" parent="Components/HurtComponent" index="0"]
shape = SubResource("CircleShape2D_ovnpp")

[node name="HitAreaComponent" type="Area2D" parent="Components" index="2"]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_025i4")
continuous = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/HitAreaComponent" index="0"]
shape = SubResource("CircleShape2D_inhqc")
